<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/currencies_screen_parent"
    android:background="@color/calculator_bg"
    tools:context=".features.currencies.CurrenciesActivity">

    <View
        android:id="@+id/currencies_rounded_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/dimen_25"
        android:background="@drawable/round_corners_bottom"
        app:layout_constraintBottom_toTopOf="@id/convert_description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currencies_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/currency_converter"
        style="@style/title_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/upper_card_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_bg"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/calculator_bg"
        app:layout_constraintBottom_toBottomOf="@id/start_currency_value"
        app:layout_constraintTop_toBottomOf="@id/currencies_screen_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/starting_currency"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/select_currency_from"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintEnd_toEndOf="@id/upper_card_bg"
        app:layout_constraintStart_toStartOf="@id/upper_card_bg"
        app:layout_constraintTop_toTopOf="@id/upper_card_bg">

        <AutoCompleteTextView
            android:id="@+id/start_cur_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/start_currency_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/round_corners"
        tools:text="@string/dummy_result"
        style="@style/calc_text_amounts"
        app:layout_constraintEnd_toEndOf="@id/upper_card_bg"
        app:layout_constraintStart_toStartOf="@id/upper_card_bg"
        app:layout_constraintTop_toBottomOf="@id/starting_currency" />

    <View
        android:id="@+id/second_card_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_bg"
        android:layout_marginTop="@dimen/dimen_25"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/calculator_bg"
        app:layout_constraintBottom_toBottomOf="@id/ending_currency_value"
        app:layout_constraintTop_toBottomOf="@id/upper_card_bg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ending_currency"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_currency"
        app:boxBackgroundColor="@color/white"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintEnd_toEndOf="@id/second_card_bg"
        app:layout_constraintStart_toStartOf="@id/second_card_bg"
        app:layout_constraintTop_toTopOf="@id/second_card_bg">

    <AutoCompleteTextView
        android:id="@+id/end_cur_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ending_currency_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/round_corners"
        style="@style/calc_text_amounts"
        tools:text="@string/dummy_result"
        app:layout_constraintBottom_toBottomOf="@id/second_card_bg"
        app:layout_constraintEnd_toEndOf="@id/second_card_bg"
        app:layout_constraintStart_toStartOf="@id/second_card_bg"
        app:layout_constraintTop_toBottomOf="@id/ending_currency" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="@dimen/dimen_25"
        android:backgroundTint="@color/calculator_blue_dark"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:layout_margin="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@id/second_card_bg" />

    <TextView
        android:id="@+id/convert_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        style="@style/text_20_bold"
        tools:text="@string/dummy_equation"
        app:layout_constraintTop_toBottomOf="@id/convert_btn"/>

    <TextView
        android:id="@+id/convert_start_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen_10"
        android:paddingEnd="@dimen/dimen_10"
        style="@style/calc_equation_desc_style"
        tools:text="@string/dummy_eq_eur"
        app:layout_constraintTop_toBottomOf="@id/convert_description"/>

    <TextView
        android:id="@+id/convert_end_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen_10"
        android:paddingEnd="@dimen/dimen_10"
        style="@style/calc_equation_desc_style"
        tools:text="@string/dummy_eq_usd"
        app:layout_constraintTop_toBottomOf="@id/convert_start_currency"/>

</androidx.constraintlayout.widget.ConstraintLayout>